# ComfyUI_DWposeDeluxe

./: .gitignore  README.md  __init__.py  json2png.py  main.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
dwpose/: __init__.py  detection.py  estimation.py  onnxdet.py  onnxpose.py  trt_inference.py  util.py  wholebody.py
example_workflows/: example.json
js/: appearance.js  browse_files.js  dwpose_dlx.js
nodes/: custom_options.py  frame_number.py  keypoint_converter.py  keypoint_printer.py  load_keypoints.py  pose_interpolation.py  weight_options.py
scripts/: __init__.py  logger.py
trt/: trt_utilities.py  utilities.py
