[project]
name = "dwposedeluxe"
description = "A custom ComfyUI node integrating DW-Pose (Denoising Whole-Body Pose Estimation) for high-quality pose detection with CPU (ONNX) and GPU (TensorRT) support. Features 20x faster performance with TensorRT acceleration, automatic model downloading, customizable pose visualization, keypoint conversion, and video workflow integration."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["tensorrt-cu12", "onnxruntime-gpu", "opencv-python", "matplotlib", "polygraphy", "colored"]

[project.urls]
Repository = "https://github.com/hobinrude/ComfyUI_DWposeDeluxe"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/hobinrude/ComfyUI_DWposeDeluxe/wiki"
"Bug Tracker" = "https://github.com/hobinrude/ComfyUI_DWposeDeluxe/issues"

[tool.comfy]
PublisherId = "hobinrude"
DisplayName = "ComfyUI_DWposeDeluxe"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

